--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <title>Clase 02 - <HTML></HTML></title>
 </head>
 <body>
-    <header><h1>Encabezado de la Página Web</h1>
+    <header><h1>Encabezado de la Pagina Web</h1>
     </header>
     <nav>
-        <h2>Navegación</h2>
+        <h2>Navegacion</h2>
     </nav>
     <main>
-        <h3>Parte Principal de la Página</h3>
+        <h3>Parte Principal de la Pagina</h3>
     </main>
     <footer>
-        <h4>Pie de página</h4>
+        <h4>Pie de pagina</h4>
     </footer>
 </body>
 </html>
