--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
     <title>Clase 02 - <HTML></HTML></title>
 </head>
 <body>
+    <!-- Encabezado -->
     <header><h1>Encabezado de la Pagina Web</h1>
     </header>
+        <!-- barra de navegacion -->
     <nav>
         <h2>Navegacion</h2>
     </nav>
+        <!-- cuerpo -->
     <main>
         <h3>Parte Principal de la Pagina</h3>
     </main>
+        <!-- Pie de pagina -->
     <footer>
         <h4>Pie de pagina</h4>
     </footer>
