--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clase 02 - <HTML></HTML></title>
+    <title>Damiv778 - <HTML></HTML></title>
 </head>
 <body>
     <!-- Encabezado -->
